feat(runtime): entrypoint v2
- feat: add entrypoint v2 to unused `runtime` module
- feat: add new `auximage` tool for generating auxiliary images
- feat: implement custom toolchain provider for edge gvm
- feat: continued implementation of pkl support
- feat: implement commonized `engine` module for engine plugin API
- feat: make entrypoint v2 compatible with `BUILD_TIME` init by default
- feat: prep for dynamic language plugins
- feat: initial structure for pkl entrypoint
- fix: fixes for typescript lang on cli
- chore: upgrade kotlin → `2.0.0`
- chore: upgrade to develocity plugin, update deprecated calls
- chore: combine several repos into `maven.elide.dev`
- chore: add gvm and nvidia upstreams to `third_party`
- chore: cleanup older `esbuild` tooling
- chore: apply round of general binary size cleanup
- chore: general maven dependency updates
- chore: update lockfiles, verification metadata, api pins
- chore: update `third_party/apple/pkl`
- chore: update `runtime`

Signed-off-by: Sam Gammon <sam@elide.ventures>